--- a/index.css
+++ b/index.css
@@ -73,6 +73,16 @@ h1 {
   font-size: var(--fs-xlarge);
 }
 
+h2 {
+  font-size: 3rem;
+}
+
+@media (max-width: 50em) {
+  h2 {
+    font-size: 2rem;
+  }
+}
+
 /* Utilities */
 .flex {
   display: flex;
@@ -122,12 +132,15 @@ h1 {
   font-size: var(--fs-normal);
   border-radius: 1.25rem;
   padding: 1rem 2rem;
+}
+
+.btn:hover {
   box-shadow: 0px 13px 21px 0px rgba(255, 112, 53, 0.30);
 }
 
 /* Header */
 .header {
-  padding-block: .5rem;
+  padding-block: 1.25rem;
   text-transform: uppercase;
 }
 
@@ -163,20 +176,27 @@ h1 {
   align-items: center;
 }
 
+.header__form {
+  gap: .5rem;
+}
+
 .header__form input {
-  outline: none;
-  border: 1px solid #CCC9C7 ;
+  border: 1px solid #CCC9C7;
+  height: 56px;
   border-radius: .5rem;
   padding: 1.1rem 1rem;
 }
 
 .header__form button {
-  position: relative;
-  top: .85rem;
-  left: -0.85rem;
+  width: 56px;
+  height: 56px;
   border: 0;
   outline: none;
   background: transparent;
+}
+
+.header__form button:hover {
+  box-shadow: 0px 13px 21px 0px rgba(255, 112, 53, 0.30);
 }
 
 .mobile-nav {
@@ -232,7 +252,7 @@ h1 {
 }
 
 @media (max-width: 69em) {
-  .header__form img{
+  .header__form img {
     display: none;
   }
 }
@@ -393,7 +413,7 @@ h1 {
   background-image: url("./images/hero-north-america-bg.svg");
 }
 
-.hero__text > *:not(:last-child) {
+.hero__text>*:not(:last-child) {
   margin-bottom: 2rem;
 }
 
@@ -502,7 +522,7 @@ h1 {
   .traveler-girl {
     bottom: .1rem;
   }
-  
+
   .traveler-boy,
   .traveler-girl {
     width: 10rem;
@@ -515,7 +535,7 @@ h1 {
   text-align: center;
 }
 
-.destinations .container > *:not(:last-child){
+.destinations .container>*:not(:last-child) {
   margin-bottom: 3rem;
 }
 
@@ -563,7 +583,7 @@ h1 {
   font-size: var(--fs-xlarge);
 }
 
-.resources__text > *:not(:last-child) {
+.resources__text>*:not(:last-child) {
   margin-bottom: 1.5rem;
 }
 
@@ -606,7 +626,7 @@ h1 {
   gap: 6rem;
 }
 
-.travel-tips__text > *:not(:last-child) {
+.travel-tips__text>*:not(:last-child) {
   padding-bottom: 2rem;
 }
 
@@ -696,14 +716,14 @@ h1 {
 
 .featured-article h3 {
   min-width: 9.375rem;
-  max-width: 32.75rem;   
+  max-width: 32.75rem;
 }
 
 .featured-article__text p {
   margin-top: .25rem;
 }
 
-.featured-article__text > *:not(:last-child) {
+.featured-article__text>*:not(:last-child) {
   margin-bottom: 1rem;
 }
 
@@ -882,7 +902,7 @@ footer {
 }
 
 @media (max-width: 25em) {
-  .footer__nav  li:nth-child(5) {
+  .footer__nav li:nth-child(5) {
     margin-inline: auto;
     width: 100%;
   }
